# console_test

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___main___py.html  z_145eef247bfb46b6_main_py.html  z_defad1a87623d8bf_book_py.html
src/: __main__.py  main.py
src/console_core/: console.py
src/console_core/utils/: books.json  console_navigator.py  coollors_text.py  crud.py  front.py  ioconsole.py
src/models/: book.py
tests/integration/: test_main.py
tests/unit/: test_book.py  test_hello_world.py
